Update Readme + Fix About page

--- a/sysAPI-0.1/srv/sysAPI/app/templates/about.html
+++ b/sysAPI-0.1/srv/sysAPI/app/templates/about.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="starter-template">
         <h1>About</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <p class="lead">Created by David Davenne <david@davenne.be></p>
+        <p>Repo : <a href="https://github.com/JuustoMestari/sysAPI" target="_blank">https://github.com/JuustoMestari/sysAPI</a></p>
 </div>
 {% endblock %}
